--- a/app/src/main/res/layout/char_creation_species.xml
+++ b/app/src/main/res/layout/char_creation_species.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:card_View="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorPrimary">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -40,12 +41,14 @@
         android:layout_height="wrap_content"
         android:layout_margin="5sp"
         card_View:cardElevation="10sp">
-    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/listview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:choiceMode="singleChoice"
-        android:listSelector="@color/listSelectColor"/>
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:choiceMode="singleChoice"
+            android:listSelector="@color/listSelectColor"
+            android:layout_marginBottom="?attr/actionBarSize"/>
+
     </android.support.v7.widget.CardView>
 
 
