--- a/app/src/main/res/layout/char_list.xml
+++ b/app/src/main/res/layout/char_list.xml
@@ -1,57 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    android:layout_marginTop="15dp">
+    android:layout_marginTop="15dp"
+    android:layout_marginBottom="15dp">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_gravity="center"
+        android:background="@color/colorWhite"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
-        card_view:cardCornerRadius="2dp"
+        card_view:cardCornerRadius="0dp"
         card_view:cardElevation="5sp"
         android:layout_below="@+id/toolbar">
 
-        <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/charPicture"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_menu_characterswitch" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="5sp">
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="2"
+            android:layout_margin="5sp">
 
         <TextView
             android:id="@+id/charName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/charPicture"
             android:maxLines="3"
-            android:padding="8dp"
-            android:text="Peter Zwegert"
+            android:text="Name"
             android:textColor="#222"
             android:textStyle="bold"
             android:textSize="22dp" />
 
-        <TextView
-            android:id="@+id/charRuleset"
+            <TextView
+                android:id="@+id/charSpezies"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/charName"
+                android:maxLines="3"
+                android:text="Spezies"
+                android:textColor="#666"
+                android:textSize="14dp" />
+
+            <TextView
+                android:id="@+id/charBeruf"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/charName"
+                android:maxLines="3"
+                android:text="Beruf"
+                android:textColor="#666"
+                android:textSize="14dp" />
+
+            <TextView
+                android:id="@+id/charSpec"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/charName"
+                android:maxLines="3"
+                android:text="Beruf"
+                android:textColor="#666"
+                android:textSize="14dp" />
+
+    </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/charName"
-            android:maxLines="3"
-            android:padding="8dp"
-            android:text="Star Wars : Am Rande des Imperiums"
-            android:textColor="#666"
-            android:textSize="14dp" />
+            android:orientation="vertical"
+            android:gravity="right"
+            android:layout_weight="2">
 
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/species_picture"
+                android:layout_width="wrap_content"
+                android:layout_height="150sp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/bothan_trans"/>
+
+        </LinearLayout>
+
+
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
