--- a/app/src/main/res/xml/species.xml
+++ b/app/src/main/res/xml/species.xml
@@ -98,7 +98,7 @@
         special="The Twi'leks are among the most prominent non-human species in the galaxy. They are expert bargainers, sly at reading other species and using cunning to get what they want."/>
 
     <species
-        name="Wookiees"
+        name="Wookiee"
         description="Kräftige pelzige Humanoiden"
         brawn_stat="3"
         agility_stat="2"
