--- a/app/src/main/res/layout/import_export_listelement.xml
+++ b/app/src/main/res/layout/import_export_listelement.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_weight="1"
         android:layout_gravity="center">
 
@@ -17,30 +18,27 @@
             android:layout_height="wrap_content"
             android:text="links"
             android:textSize="20sp"
-            android:gravity="center"
-            android:layout_margin="10sp"/>
-
-        </LinearLayout>
+            android:layout_margin="10sp"
+            android:layout_weight="1"
+            android:gravity="center"/>
 
         <View
             android:layout_marginLeft="3sp"
             android:layout_marginRight="3sp"
             android:layout_marginTop="7sp"
             android:layout_marginBottom="7sp"
+            android:gravity="center"
             android:layout_weight="0"
             android:layout_width="1sp"
             android:layout_height="match_parent"
             android:background="@color/colorGrey"/>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
         <TextView
             android:id="@+id/elementSpecies"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="rechts"
             android:textSize="20sp"
             android:gravity="center"
@@ -49,4 +47,4 @@
 
 
 
-    </LinearLayout>
+    </RelativeLayout>
